# moondream-station

./: .dockerignore  Dockerfile  README.md  moondream2.manifest.json  non_interactive_server.py  non_interactive_setup.py  pyproject.toml
backends/mds_backend_0/: backend.py
